--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Allison&family=Calligraffitti&family=JetBrains+Mono:wght@300&family=Roboto:wght@300&display=swap');
 
 body {
-    background-image: url("img/background-RioDeJaneiro.jpeg");
+    background-image: url("./img/destino-rio-de-janeiro-brazil-para-conocer-el-cerro-del-corcovado.jpg");
     background-position: top;
     background-repeat: no-repeat;
     background-attachment: fixed;
