--- a/stylesCP.css
+++ b/stylesCP.css
@@ -58,7 +58,11 @@ body header a:hover{
 body main{
     grid-area: main;
     height: calc(100vh - 200px);
-
+    background-color: #ffffff96;
+    border-radius: 10px;
+    padding: 20px;
+    color: black;
+    text-align: justify;
 }
 
 body aside{
@@ -77,15 +81,16 @@ body footer{
     background-color:#4d4d4d65;
     height: 100px;
     display: grid;
-    grid-template-columns: 200px auto;
-    grid-template-areas: footerLeft footerRight;
+    grid-template-columns: 250px auto;
+    grid-template-areas: 'footerLeft footerRight';
 }
 
 .footerLeft{
     grid-area: footerLeft;
     color: white;
-    bottom: 0;
-    
+    bottom: 0;   
+    padding-left: 15px;
+    padding-top: 25px
 }
 
 .footerRight{
@@ -114,4 +119,6 @@ body footer{
 .description .sobre-conteudo p{
     grid-area: descricao;
     font-size: 12px;
+    padding-top: 15px;                     
+
 }
