--- a/styles.css
+++ b/styles.css
@@ -57,12 +57,23 @@ body header a:hover{
 
 body main{
     grid-area: main;
-    height: calc(100vh - 200px);
+    height: calc(100vh - 300px);
     background-color: #ffffff78;
     border-radius: 10px;
     padding: 20px;
     color: black;
     text-align: justify;
+    margin-top: 50px;
+}
+
+.bem-vindo{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    padding-top: 30px;
+
 }
 
 body aside{
@@ -71,6 +82,9 @@ body aside{
 
 .asideRight{
     grid-area: asideRight;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 body footer{
@@ -121,4 +135,31 @@ body footer{
     font-size: 12px;
     padding-top: 15px;                     
 
+}
+
+.botao {
+    background-color: #008CBA;
+    border: none;
+    padding: 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 50%;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+}
+
+.botao:hover {
+   background-color: #0051ff94;    
+
+}
+
+.botao a {
+    color: white;
+}
+
+.botao a span {
+    font-size: xx-large;
 }
