--- a/styles.css
+++ b/styles.css
@@ -205,7 +205,7 @@ body footer{
 .box-conteudo a:hover {
     transform: scale(1.2);
 }
-
+/* 
 main form{
     display: flex;
     flex-direction: column;
@@ -213,7 +213,7 @@ main form{
     align-items: flex-start;
     min-width: fit-content;
     gap: 0.5rem;
-}
+} */
 
 .button button{
     background-color: #008CBA;
@@ -222,3 +222,24 @@ main form{
     padding: 5px 10px 5px 10px;
     
 }
+
+input, select, textarea {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  
+  input[type=submit] {
+    width: 100%;
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
