--- a/styles.css
+++ b/styles.css
@@ -205,41 +205,77 @@ body footer{
 .box-conteudo a:hover {
     transform: scale(1.2);
 }
-/* 
-main form{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    min-width: fit-content;
-    gap: 0.5rem;
-} */
 
-.button button{
-    background-color: #008CBA;
-    border-radius: 10px;
-    border: none;
-    padding: 5px 10px 5px 10px;
-    
+.titulo {
+    padding-bottom: 15px;
 }
 
-input, select, textarea {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-  }
-  
-  input[type=submit] {
-    width: 100%;
-    background-color: #4CAF50;
+fieldset {
+    border: 0;
+}
+
+.grupo:before, .grupo:after {
+    content: " ";
+    display: table;
+}
+
+.grupo:after {
+    clear: both;
+}
+
+fieldset.grupo .area {
+    float:  left;
+    margin-right: 1em;
+}
+
+.area input[type="text"],
+.area input[type="email"],
+.area input[type="tel"],
+.area input[type="date"],
+.area select {
+    width: 300px;
+    padding: 0.2em;
+    border: 1px solid #CCC;
+    box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
+    border-radius: 5px;
+    display: block;
+}
+
+.area input[type="text"]:hover,
+.area input[type="email"]:hover,
+.area input[type="tel"]:hover,
+.area input[type="date"]:hover,
+.area input[type="radio"]:hover,
+.area input[type="radio"]:hover,
+.area select:hover {
+    transform: scale(1.2);
+}
+
+.area select option {
+    padding-right: 1em;
+}
+
+.area input:focus, .campo select:focus {
+    background: #FFC;
+}
+
+button {
+    background-color: #008CBA;
     color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
     border: none;
-    border-radius: 4px;
+    padding: 10px;
+    text-align: center;
+    margin: 4px 2px;
     cursor: pointer;
-  }
+    border-radius: 12px;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+}
+
+button:hover {
+    background-color: #0051ff94;  
+}
+
+button, select {
+    cursor: pointer;
+}
