--- a/styles.css
+++ b/styles.css
@@ -276,7 +276,7 @@ button, select {
     cursor: pointer;
 }
 
-@media (max-width: 450px){
+@media (min-width: 450px){
     body {
         grid-template-columns: auto;
         grid-template-areas: 'header'
